# odsc-example

./: README.md  pyproject.toml
src/odsc_ai_speaker_qualification_automation/: crew.py  main.py
src/odsc_ai_speaker_qualification_automation/config/: agents.yaml  tasks.yaml
